# nsfw-detector

./: .gitignore  CMakeLists.txt  about.md  as  changelog.md  mod.json
.github/workflows/: build.yml
src/: NSFWDetector.cpp  NSFWDetector.hpp  main.cpp
src/analyzers/: AlphaFlashAnalyzer.cpp  AlphaFlashAnalyzer.hpp  ArtClusterAnalyzer.cpp  ArtClusterAnalyzer.hpp  CameraTrickAnalyzer.cpp  CameraTrickAnalyzer.hpp  ColorTrickAnalyzer.cpp  ColorTrickAnalyzer.hpp  LagMachineAnalyzer.cpp  LagMachineAnalyzer.hpp  ToggleRevealAnalyzer.cpp  ToggleRevealAnalyzer.hpp
src/ui/: ScanPopup.cpp  ScanPopup.hpp
src/utils/: ObjectUtils.cpp  ObjectUtils.hpp
